# forge

./: .checkstyle  .classpath  .fbprefs  .gitattributes  .gitignore  .gitlab-ci.yml  .project  2009-10-12-00.txt  2026-05-18-110515-id-like-to-add-to-the-forge-llm-sidecar-pipeline.txt  2026-05-19-115305-help-me-run-this-forge-application-im-on-ubuntu.txt  2026-05-22-import-decks-button.txt  AGENTS.md  AI-Scoring-additions-primer-refactor-draftsim.txt  AI_AGENT_API_SPEC.md  AI_AGENT_RESPONSE_FORMAT.md  ARCHITECTURAL_REVIEW.md  BRANCH_DOCUMENTATION.md  BUGS.md  Blur.txt  Branch_Documentation.md  CHANGES.txt  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  DS4CommitsBreak.md  DeltaSyncQuickTest.java  FORGEHEADLESSSERVER_API.md  Gluntch, the Bestower.txt  HEADLESS_README.md  Haunted One.txt  LOGGING.md  NETWORK_ARCHITECTURE.md  NETWORK_OPTIMIZATION.md  README.md  README.txt  REFACTORING_PLAN.md  REFACTOR_OPTIONS.md  REFACTOR_STRATEGY.md  REFACTOR_SUMMARY.md  TARGETING_SUMMARY.md  (+74 more)
forge-llm-sidecar/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TEST_GUIDE.md  beatdown-refactor.txt  dashboard-strategist-plus-mana-avail.txt  dashbuild.md  fixlogparsing1.md  fixparseerror.md  mtggoldfish-dck-importer.txt  oppo-mana-colors-eval.txt  pyproject.toml  sidecar-fixes-host-online.txt  speed-up-recognize-cache-wait-for-ai-to-play.txt  test-sidecar-session.md
forge-llm-sidecar/app/: __init__.py  advice.py  combo.py  config.py  early_plan.py  graph.py  llm_client.py  main.py  ollama_client.py  opponent_hand_probability.py  schema.py  selfplay_store.py  store.py
forge-llm-sidecar/docs/: ADAPTERS.md  API.md  ARCHITECTURE.md  DECK_IDENTIFICATION.md  EXTENDING.md  PILOTING.md  PLAYING_WITH_SIDECAR.md  SELFPLAY_SIMULATIONS.md
forge-llm-sidecar/guidance/: commander.json  legacy.json  modern.json  pauper.json  pioneer.json  standard.json  vintage.json
forge-llm-sidecar/reports/: card_bucket_coverage_commander.md  card_bucket_coverage_legacy.md  card_bucket_coverage_modern.md  (+4 more)
(+226544 files in other folders)
