[project]
name = "forge-llm-sidecar"
version = "0.1.0"
description = "LangGraph LLM sidecar for the Forge MTG simulator (deck recognition)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.nodes", "app.knowledge"]

[tool.setuptools.package-data]
"app.knowledge" = ["archetypes/*.json", "metagame_data/*.json"]
