[project]
name = "forge-llm-sidecar"
version = "0.1.0"
description = "LangGraph LLM sidecar for the Forge MTG simulator (deck recognition)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["app/knowledge/metagame_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.nodes", "app.knowledge", "app.forge_log", "app.static"]

[tool.setuptools.package-data]
"app.knowledge" = ["archetypes/*.json", "metagame_data/*.json", "piloting/*/*.json"]
"app.static" = ["*.html"]
